--- a/index.html
+++ b/index.html
@@ -36,12 +36,13 @@
   const drawImg = () => {
     var img = document.createElement('img')
     img.src = './card.jpg';
-    ctx.drawImage(img, 0, 0,350,650);
+    ctx.drawImage(img, 0, 0,400,700);
   }
   
   const fillText = () => {
     ctx.font='30px Arial';
-    ctx.fillText(name.value,200,500);
+    ctx.fillText(name.value,200,450);
+    ctx.textAlign = "center";
   }
 
 </script>
